Jenkins file added

--- a/deploy_calculator.yml
+++ b/deploy_calculator.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Pull the latest Docker image from Docker Hub
       community.docker.docker_image:
-        name: teerth08/calculator-app
+        name: teerth008/calculator-app
         tag: latest
         source: pull
 
@@ -25,7 +25,7 @@
     - name: Run the Calculator App container
       community.docker.docker_container:
         name: calculator
-        image: teerth08/calculator-app:latest
+        image: teerth008/calculator-app:latest
         state: started
         restart_policy: always
         ports:
